--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Minimaliste</title>
+    <title>Portfolio Matthieu LOOCK</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Mon Portfolio</h1>
+            <h1>Matthieu LOOCK</h1>
             <nav>
                 <ul>
                     <li><a href="#about">À propos</a></li>
@@ -24,6 +24,9 @@
         <div class="container">
             <h2>À propos de moi</h2>
             <p>Je suis un développeur web freelance passionné par la création de sites web modernes et efficaces.</p>
+            <p>
+                J'aide les entreprises, les associations, les entrepreneurs à développer leurs projets numériques et à atteindre leurs objectifs de communication marketing sur le web.
+            </p>
         </div>
     </section>
 
@@ -37,7 +40,7 @@
     <section id="contact" class="section">
         <div class="container">
             <h2>Contactez-moi</h2>
-            <p>Vous pouvez me contacter à l'adresse email@example.com</p>
+            <p>Vous pouvez me contacter <a href="mailto:matthieu.loock@tuta.io">ici</a></p>
         </div>
     </section>
 
