--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <section id="projects" class="section">
         <div class="container">
             <h2>Mes Projets</h2>
+            <ul>
+                <li><a href="">Hello Lando</a>: Template LAMP pour développer en local mes projets PHP et SQL</li>
+                <li><a href="">Leaflet sandbox</a>: Bac à sable où j'illustre les possibilités données par Leaflet en terme de SIG</li>
+                <li><a href="">BD Forêt - Couverture végétale</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li>
+            </ul>
             <!-- Insérer des exemples de projets ici -->
         </div>
     </section>
@@ -46,7 +51,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
+            <p>&copy; 2024 Matthieu LOOCK. Tous droits réservés.</p>
         </div>
     </footer>
 </body>
