--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="container">
             <h2>Mes Projets</h2>
             <ul>
-                <li><a href="">Hello Lando</a>: Template LAMP pour développer en local mes projets PHP et SQL</li>
-                <li><a href="">Leaflet sandbox</a>: Bac à sable où j'illustre les possibilités données par Leaflet en terme de SIG</li>
-                <li><a href="">BD Forêt - Couverture végétale</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li>
+                <li><a href="https://github.com/matthieu-loock/hello">Hello Lando</a>: Template Lando LAMP pour développer en local mes projets PHP et SQL</li>
+                <li><a href="https://github.com/matthieu-loock/leaflet-training">Leaflet sandbox</a>: Bac à sable où j'illustre les possibilités données par Leaflet en terme de SIG</li>
+                <li><a href="https://github.com/matthieu-loock/bd_foret_v2_france">BD Forêt - Couverture végétale</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li>
+                <li><a href="https://github.com/matthieu-loock/matthieu-loock.github.io">Portfolio</a>: ce portfolio, rédigé en HTML et CSS</li>
             </ul>
-            <!-- Insérer des exemples de projets ici -->
         </div>
     </section>
 
