--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Matthieu LOOCK</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -22,7 +19,7 @@
             </nav>
         </div>
     </header>
-
+    <hero>
     <section id="about" class="section">
         <div class="container">
             <h2>À propos de moi</h2>
@@ -39,7 +36,7 @@
             <ul>
                 <li><a href="https://github.com/matthieu-loock/hello">Hello Lando</a>: Template Lando LAMP pour développer en local mes projets PHP et SQL</li>
                 <li><a href="https://github.com/matthieu-loock/leaflet-training">Leaflet sandbox</a>: Bac à sable où j'illustre les possibilités données par Leaflet en terme de SIG</li>
-                <li><a href="https://github.com/matthieu-loock/bd_foret_v2_france">BD Forêt - Couverture végétale</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li>
+                <li><a href="https://github.com/matthieu-loock/bd_foret_v2_france">BD Forêt</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li>
                 <li><a href="https://github.com/matthieu-loock/matthieu-loock.github.io">Portfolio</a>: ce portfolio, rédigé en HTML et CSS</li>
             </ul>
         </div>
@@ -51,7 +48,7 @@
             <p>Vous pouvez me contacter <a href="mailto:matthieu.loock@tuta.io">ici</a></p>
         </div>
     </section>
-
+    </hero>
     <footer>
         <div class="container">
             <p>&copy; 2024 Matthieu LOOCK. Tous droits réservés.</p>
