--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Matthieu LOOCK</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -45,7 +46,7 @@
             <ul>
                 <li><a href="https://github.com/matthieu-loock/hello">Hello Lando</a>: Template Lando LAMP pour développer en local mes projets PHP et SQL</li><br>
                 <li><a href="https://github.com/matthieu-loock/leaflet-training">Leaflet sandbox</a>: Bac à sable où j'illustre les possibilités données par Leaflet en terme de SIG</li><br>
-                <li><a href="https://github.com/matthieu-loock/bd_foret_v2_france">BD Forêt</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li><br>
+                <li><a href="https://github.com/matthieu-loock/ign_foret">IGN Forêt</a>: BD SIG provenant de l'IGN, compilant les couvertures végétales par département à l'échelle nationale</li><br>
                 <li><a href="https://github.com/matthieu-loock/matthieu-loock.github.io">Portfolio</a>: ce portfolio, rédigé en HTML et CSS, propulsé par Github Pages</li><br>
             </ul>
         </div>
@@ -64,5 +65,6 @@
             <p>&copy; 2024 Matthieu LOOCK. Tous droits réservés.</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
